# PythonBasic23-05

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  req.txt  requirements.txt
homework_01/: main.py
homework_02/: __init__.py  base.py  car.py  engine.py  exceptions.py  plane.py
homework_03/: Dockerfile  main.py  pyproject.toml
homework_04/: jsonplaceholder_requests.py  main.py  models.py
homework_05/: app.py
homework_05/templates/: about.html  base.html  index.html
homework_05/views/: views.py
homework_06/: README.md  config.py  main.py  prestart.sh
homework_06/docker-build/: Dockerfile  Dockerfile-local
homework_06/migrations/versions/: 2024_02_16_0059-5f44d8209aad_create_users_table.py  2024_02_16_1612-225c30f4be73_crate_users_table.py
homework_06/models/: __init__.py  database.py  post.py  user.py
homework_06/templates/: base.html  index.html
homework_06/templates/users/: confirm-delete.html  create.html  details.html  index.html
homework_06/utils/: fetch_data.py  main.py  mock_loader.py  models.py
homework_06/views/posts/: crud.py  views.py
homework_06/views/users/: crud.py  views.py
testing/test_homework_02/: test_base.py  test_car.py
